...
    }

    object Api {
        const val VERSION = "version"
        const val CONTACTS = "contacts"
        const val USERS_REGISTER = "users/register"
        const val USERS_LOGIN = "users/login"
        const val CONTACTS_ADD = "contacts/add"
        const val CONTACTS_REMOVE = "contacts/remove"
        const val TOKEN_REFRESH = "token/refresh"
        const val USERS_FCM_TOKEN = "users/fcm-token"
        const val USERS_PRIVACY = "users/privacy"
        const val USERS_LOGOUT = "users/logout"
...
