appId: com.github.biltudas1.sequence
---
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Email"
- inputText: "dummyuser@example.com"
- hideKeyboard
- tapOn: "Password"
- inputText: "DummyUser@123"
- hideKeyboard
- tapOn: "Login"
- waitForAnimationToEnd:
    timeout: 10000
- assertVisible: "(?i).*(dialer|permission).*"
